--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["letang.jeremy@gmail.com"]
 
 [[lib]]
 name = "route_macros"
-crate-type = ["rlib", "dylib"]
+crate_type = ["rlib", "dylib"]
